--- a/Views/add.ejs
+++ b/Views/add.ejs
@@ -40,8 +40,8 @@
             <div class="mx-auto pb-3 tm-about-text-container px-3">
               <div class="row">
                 <div class="mx-auto col-lg-12 mb-5">
-                  <form id="contact-form" action="/photos" method="POST" class="tm-contact-form">
-                    <!-- encType="multipart/form-data" -->
+                  <form id="contact-form" action="/photos" method="POST" class="tm-contact-form"
+                    enctype="multipart/form-data">
                     <div class="form-group">
                       <input type="text" name="title" class="form-control rounded-0" placeholder="Photo Title"
                         required />
@@ -52,7 +52,7 @@
                     </div>
 
                     <div class="form-group">
-                      <input type="file" name="image" class="form-control-file rounded-0">
+                      <input type="file" name="image" class="form-control-file rounded-0" required>
                     </div>
 
                     <div class="form-group mb-0">
